@@ -1,4 +1,5 @@
-﻿using Terraria;
+﻿using mushroommod.Projectiles;
+using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
 
@@ -13,17 +14,50 @@ namespace mushroommod.Items
 
         public override void SetDefaults()
         {
+
+            // common properties
+            Item.rare = ItemRarityID.Pink;
+            Item.value = Item.sellPrice(silver: 30);
+
+
+            // use properties
+            Item.useStyle = ItemUseStyleID.Shoot;
+            Item.useAnimation = 22;
+            Item.useTime = 22;
+            Item.autoReuse = true;
+
+            // weapon properties
+            Item.damage = 50;
+            Item.knockBack = 6.4f;
+            Item.noUseGraphic = true;
+            Item.DamageType = DamageClass.MeleeNoSpeed;
+            Item.noMelee = true;
+
+            // projectile properties
+            Item.shootSpeed = 5.6f;
+            Item.shoot = ModContent.ProjectileType<Lucille_projectile>();
+
+            /*
             Item.width = 20;
             Item.height = 20;
             Item.maxStack = 1;
-            Item.value = 100;
-            Item.rare = ItemRarityID.Pink;
-            // Set other Item.X values here
+            */
+        }
+
+        public override bool CanUseItem(Player player)
+        {
+            // Ensures no more than one spear can be thrown out
+            return player.ownedProjectileCounts[Item.shoot] < 1;
         }
 
         public override void AddRecipes()
         {
-            // Recipes here. See Basic Recipe Guide
+            Recipe recipe = CreateRecipe();
+            recipe.AddIngredient(ItemID.Wood, 10);
+            recipe.AddIngredient(ItemID.StoneBlock, 1);
+            recipe.AddIngredient(ItemID.SoulofMight, 5);
+            recipe.AddTile(TileID.MythrilAnvil);
+            recipe.Register();
         }
     }
 }
